Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <h1>
 <a id="javascript-design-patterns" class="anchor" href="#javascript-design-patterns" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JavaScript Design Patterns</h1>
 
+<blockquote>
+<p>★ represents the frequency of use in JavaScript.</p>
+</blockquote>
+
 <h3>
 <a id="creational-patterns5" class="anchor" href="#creational-patterns5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creational Patterns(5)</h3>
 
@@ -42,25 +46,25 @@
 <li>Composite ★★★★★</li>
 <li>Decorator ★★★★</li>
 <li>Facade ★★★★★</li>
-<li>Flyweight</li>
-<li>Proxy</li>
+<li>Flyweight ★★★★★</li>
+<li>Proxy ★★★★</li>
 </ol>
 
 <h3>
 <a id="behavioral-patterns11" class="anchor" href="#behavioral-patterns11" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Behavioral Patterns(11)</h3>
 
 <ol>
-<li>Chain of Resp.</li>
-<li>Command</li>
-<li>Interpreter</li>
-<li>Iterator</li>
-<li>Mediator</li>
-<li>Memento</li>
-<li>Observer</li>
-<li>State</li>
-<li>Strategy</li>
-<li>Template Method</li>
-<li>Visitor</li>
+<li>Chain of Resp. ★★★</li>
+<li>Command ★★★★★</li>
+<li>Interpreter ★</li>
+<li>Iterator ★★★★★</li>
+<li>Mediator ★★</li>
+<li>Memento ★</li>
+<li>Observer ★★★★★</li>
+<li>State ★★</li>
+<li>Strategy ★★★</li>
+<li>Template Method ★★</li>
+<li>Visitor ★</li>
 </ol>
 
 <h1>
